feat(ui): add indefinite progress variant
- Added indefinite progress bar using css rotate animation.

--- a/src/uic/css/Essential.css
+++ b/src/uic/css/Essential.css
@@ -230,3 +230,22 @@ body {
 .a2logmt {
   color: #939393;
 }
+
+@keyframes Spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.a2progindef {
+  animation-name: Spin;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+}
