perf(ui): increase ui text contrast
- Increased light level of ui text.

--- a/src/uic/css/Revive.css
+++ b/src/uic/css/Revive.css
@@ -3,7 +3,7 @@ html {
     Verdana, sans-serif;
   --a2-base: #24bfa5;
   --a2-text: #13ae94;
-  --a2-typo: #c3ffee;
+  --a2-typo: #ddfff5;
   --a2-title: white;
   --a2-shadow: #67676750;
   --a2-shadow-highligh: gray;
